<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/traffic"
    tools:context=".Home">

    <Button
        android:id="@+id/Report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/report"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/previous_reports"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Report"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/Report_description"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#ffff"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Report"
        app:layout_constraintVertical_bias="0.053">


        <EditText
            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:height="260dp"
            android:background="#d8d8ed"
            android:hint="@string/brief_description"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/Submit_Report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/Description"
            android:layout_alignRight="@+id/Description"
            android:layout_below="@+id/Description"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="#ffff"
            android:text="@string/submit" />

        <ImageView
            android:id="@+id/Attarchment"

            android:layout_width="78dp"
            android:layout_height="49dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/Submit_Report"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:background="@drawable/ic_action_camera"
            android:contentDescription="@string/image_video"
            android:maxHeight="70dp"
            android:maxWidth="70dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/Exit"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:text="Exit" />
    </RelativeLayout>


    <Button
        android:id="@+id/LogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Driver_History"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/driver_history"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/Previous"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Reported_offences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/reported_offences"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Driver_History"
        tools:text="Reported Offences" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/Offences"
        android:visibility="gone"
        android:layout_width="365dp"
        android:layout_height="340dp"
        android:layout_alignParentBottom="true"
        android:background="#d8d8ed"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/LogOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Previous"
        android:layout_alignParentLeft="true" />
</android.support.constraint.ConstraintLayout>