<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efe5c5"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/TypeEmail"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="@+id/Email"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />


    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_below="@+id/Email"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/typepassword"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password"
        android:layout_alignEnd="@+id/TypeEmail"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_alignRight="@+id/TypeEmail" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textStyle="normal"
        android:text="@string/login"
        android:layout_below="@+id/password"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#7d8c7d"/>


    <Button
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:textSize="15sp"
        android:textStyle="normal"
        android:layout_below="@+id/login"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#7d8c7d"/>
    <ProgressBar
        android:id="@+id/Progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


</RelativeLayout>